# ir-voice

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
data/audio/digits/: 0_22050.s16  1_22050.s16  2_22050.s16  3_22050.s16  4_22050.s16  5_22050.s16  6_22050.s16  7_22050.s16  8_22050.s16  9_22050.s16
scripts/: generate_digit_pcm.py
src/: main.rs
