[package]
name = "ir-voice"
version = "0.1.0"
edition = "2024"

[features]
default = ["pico2"]
pico1 = ["device-envoy/pico1", "embassy-rp/rp2040"]
pico2 = ["device-envoy/pico2", "embassy-rp/rp235xb"]

[dependencies]
device-envoy = { path = "../device-envoy", default-features = false, features = ["arm"] }
embassy-executor = { version = "0.9.1", default-features = false, features = ["executor-thread", "arch-cortex-m"] }
embassy-rp = { version = "0.9.0", default-features = false, features = ["rt", "defmt", "time-driver", "critical-section-impl"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m-rt = "0.7.5"
static_cell = "2.1.0"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
